# review-migrator

./: .gitignore  README.md  pyproject.toml  run_review_migrator_gui.bat  run_review_migrator_gui.command
.github/workflows/: build-windows-exe.yml
chrome_extensions/smartstore_review_image_collector/: README.md  content.js  manifest.json  popup.css  popup.html  popup.js
docs/: operation_guide.md  research_notes.md  staff_gui_guide.md
review_migrator/: __init__.py  cli.py  config.py  gui.py  gui_paths.py  pipeline.py  schemas.py  utils.py
review_migrator/cafe24/: __init__.py  admin.py
review_migrator/crema/: __init__.py  auth.py  client.py  errors.py  http_session.py  permissions.py  products.py  reviews.py
review_migrator/harness/: __init__.py  approval_gate.py  audit_log.py  base.py  manifest.py  run_context.py
review_migrator/images/: __init__.py  additional_csv.py  downloader.py  ftp_storage.py  matcher.py  storage.py  url_checker.py  validators.py
review_migrator/mapping/: __init__.py  auto_mapping.py  crema_product_sync.py  product_mapping.py  validators.py
review_migrator/naver_export/: __init__.py  parser.py  (+3 more)
scripts/: build_windows_exe.ps1
tests/: test_auto_mapping.py  test_cafe24_admin.py  test_cli_upload_guard.py  test_column_detection.py  test_config.py  test_crema_client.py  test_crema_csv.py  test_crema_payload.py  test_crema_permissions.py  test_gui_paths.py  test_idempotency.py  test_image_matcher.py  test_naver_parser.py  test_product_mapping.py  test_smartstore_review_images.py  test_verification.py
tools/: windows_gui_launcher.py
(+15 files in other folders)
